wbem-client/src/snapshots/wbem_client__cim_xml__req__tests__build_imethodcall_instance.snap
---
source: wbem-client/src/cim_xml.rs
expression: "String::from_utf8_lossy(&xs)"
---
<?xml version="1.0" encoding="utf-8"?>
<CIM CIMVERSION="2.0" DTDVERSION="2.0">
    <MESSAGE ID="1001" PROTOCOLVERSION="1.0">
        <SIMPLEREQ>
            <IMETHODCALL NAME="GetInstance">
                <LOCALNAMESPACEPATH>
                    <NAMESPACE NAME="root"/>
                    <NAMESPACE NAME="ddn"/>
                </LOCALNAMESPACEPATH>
                <IPARAMVALUE NAME="InstanceName">
                    <INSTANCENAME CLASSNAME="DDN_SFAStorageSystem"/>
                </IPARAMVALUE>
            </IMETHODCALL>
        </SIMPLEREQ>
    </MESSAGE>
</CIM>
